fix wrong width for window width over 1200px

--- a/jportal_mcr_module/src/main/resources/META-INF/resources/css/jp-default.css
+++ b/jportal_mcr_module/src/main/resources/META-INF/resources/css/jp-default.css
@@ -238,6 +238,12 @@ html .jp-layout-metadataList a, html p a, html .jp-layout-inList a, html .jp-lay
 	}
 }
 
+@media (min-width: 1200px){
+	.logo.container {
+		width: 970px;
+	}
+}
+
 .jp-layout-hit-breadcrumb li:first-child {
 	padding-left: 0px;
 }
